add DAODelegate