@@ -1,5 +1,6 @@
 package com.ac.service.fl.fulfilment;
 
+import com.ac.model.dao.DAODelegate;
 import com.ac.model.dao.fl.fulfilment.DeliveryOrderDAO;
 import com.ac.model.fl.fulfilment.FlDeliveryOrder;
 
@@ -8,7 +9,6 @@ import my.ep.jaxb.fl.dodata.list.FLDeliveryOrderListDataType;
 
 public class DeliveryOrderService {
 
-	DeliveryOrderDAO deliveryOrderDAO = new DeliveryOrderDAO();
 	/**
 	 * Generate DO Payload
 	 * @param documentId accept deliveryOrderId, deliveryOrderNo
@@ -18,19 +18,25 @@ public class DeliveryOrderService {
 		FLDeliveryOrderListDataType doList = new FLDeliveryOrderListDataType();
 		FLDeliveryOrderDataType deliveryOrderDataType = new FLDeliveryOrderDataType();
 		
-		deliveryOrderDataType.setDoId(findDeliveryOrderId(documentId));
+		FlDeliveryOrder flDeliveryOrder = findDeliveryOrderId(documentId);
+		deliveryOrderDataType.setDoId(flDeliveryOrder.getDeliveryOrderId());
 	}
 	
-	private Long findDeliveryOrderId(String documentId) throws Exception {
+	private FlDeliveryOrder findDeliveryOrderId(String documentId) throws Exception {
+		DeliveryOrderDAO deliveryOrderDAO = DAODelegate.getInstance().getDataObject(DeliveryOrderDAO.class);
+		FlDeliveryOrder flDeliveryOrder = null;
 		if(documentId.length()==17) { // DO
-			FlDeliveryOrder flDeliveryOrder = deliveryOrderDAO.retrieveDeliveryOrderByNo(documentId);
+			flDeliveryOrder = deliveryOrderDAO.retrieveDeliveryOrderByNo(documentId);
 			if(flDeliveryOrder==null) {
 				throw new Exception("Invalid Delivery Order No. :"+documentId);
 			}
-			return flDeliveryOrder.getDeliveryOrderId();
 		} else {
-			return new Long(documentId);
+			flDeliveryOrder = deliveryOrderDAO.retrieveDeliveryOrderById(Long.valueOf(documentId));
+			if(flDeliveryOrder==null) {
+				throw new Exception("Invalid Delivery Order ID :"+documentId);
+			}
 		}
+		return flDeliveryOrder;
 	}
 	
 }
